<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/text_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textMessage"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" android:textSize="30sp"/>
    <Button
            android:text="@string/button_text_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonCat"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonMonkey"
            android:textSize="18sp"/>
    <Button
            android:text="@string/button_text_monkey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonMonkey"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/buttonDog"
            android:textSize="18sp"/>
    <Button
            android:text="@string/button_text_cow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonCow"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonPig" android:textSize="18sp"/>
    <Button
            android:text="@string/button_text_pig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonPig"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonHorse" android:textSize="18sp"/>
    <Button
            android:text="@string/button_text_horse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonHorse"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonElephant" android:textSize="18sp"/>
    <Button
            android:text="@string/button_text_elephant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonElephant"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp" android:textSize="18sp"/>
    <Button
            android:text="@string/button_text_dog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonDog"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonCow" android:textSize="18sp"/>
    <Button
            android:text="@string/button_text_mouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonMouse"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonGorilla" android:textSize="18sp"/>
    <Button
            android:text="@string/button_text_gorilla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonGorilla"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonChick" android:textSize="18sp"/>
    <Button
            android:text="@string/button_text_chick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonChick"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonSheep" android:textSize="18sp"/>
    <Button
            android:text="@string/button_text_moai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonMoai"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonFox" android:textSize="18sp"/>
    <Button
            android:text="@string/button_text_sheep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonSheep"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonMoai" android:textSize="18sp"/>
    <Button
            android:text="@string/button_text_fox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonFox"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonGiraffe" android:textSize="18sp"/>
    <Button
            android:text="@string/button_text_giraffe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonGiraffe"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp" android:textSize="18sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>